--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h1 id="main-menu-title" class="main-menu__title">Explosive Candy</h1>
             <p class="main-menu__text">
                 Kombiniere farbige Süßigkeiten, löse Explosionen aus und knacke die Levelziele. Starte im
-                Level Modus oder sichere dir im Endlos Modus einen neuen Highscore, während das Spielfeld
+                Level Modus oder sichere dir im Blocker Modus einen neuen Highscore, während das Spielfeld
                 immer härter wird.
             </p>
             <div class="auth">
@@ -39,7 +39,7 @@
                     <div class="auth__label">Google Login</div>
                     <div id="auth-status" class="auth__status">Nicht angemeldet</div>
                     <div id="auth-progress" class="auth__progress">Fortschritt: Level 1</div>
-                    <div id="auth-progress-endless" class="auth__progress">Endlos-Highscore: 0</div>
+                    <div id="auth-progress-blocker" class="auth__progress">Blocker-Modus-Highscore: 0</div>
                 </div>
                 <div class="auth__actions">
                     <div id="google-login" class="auth__button">
@@ -51,7 +51,7 @@
             </div>
             <div class="main-menu__actions">
                 <button id="start-level" class="main-menu__button" type="button" disabled>Level Modus</button>
-                <button id="start-endless" class="main-menu__button main-menu__button--secondary" type="button">Endlos Modus</button>
+                <button id="start-blocker" class="main-menu__button main-menu__button--secondary" type="button">Blocker Modus</button>
                 <p class="main-menu__note">Highscores werden wie dein Level-Fortschritt gespeichert. Optionen über das Menü oben rechts öffnen.</p>
             </div>
         </div>
