--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
         </div>
     </div>
     <div id="game" class="board"></div>
+    <div id="tactical-toolbar" class="tactical-toolbar" role="toolbar" aria-label="Taktische Werkzeuge"></div>
 
     <div id="move-evaluation" class="move-evaluation" role="status" aria-live="polite"></div>
 
