add different cell shapes

--- a/index.html
+++ b/index.html
@@ -164,6 +164,13 @@
                     </select>
                 </div>
                 <div class="options-modal__group">
+                    <label class="options-modal__label" for="cell-shape-mode">Zellformen</label>
+                    <select id="cell-shape-mode" class="options-modal__select">
+                        <option value="square" selected>Alle Quadrate</option>
+                        <option value="shaped">Farb-spezifische Formen</option>
+                    </select>
+                </div>
+                <div class="options-modal__group">
                     <span class="options-modal__label">Audio</span>
                     <button id="audio-toggle" class="options-modal__action" type="button" aria-pressed="true">
                         Audio an
