--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- important for mobile devices to get the scaling right! -->
-    <title>Match-3 Browsergame mit Sounds</title>
+    <title>Explosive Candy</title>
     <link rel="stylesheet" href="css/match-app.css" />
     <link rel="stylesheet" href="css/options-toggle.css" />
     <link rel="stylesheet" href="css/main-menu.css" />
