add sugar chest and sugar coins

--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
                     <div id="auth-progress-time" class="auth__progress" data-i18n-key="auth.progress.time">
                         Time mode best: 00:00
                     </div>
+                    <div class="auth__coins">
+                        <img id="auth-coin-icon" class="auth__coins-icon" src="assets/images/sugar_coin_icon.png" alt="Sugar coins">
+                        <span id="auth-coin-count" class="auth__coins-count">Sugar coins: 0</span>
+                    </div>
                 </div>
                 <div class="auth__actions">
                     <div id="google-login" class="auth__button">
