remove move display on blocker and time mode

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <div id="difficulty" class="hud__difficulty" style="display: none">Easy</div>
             </div>
 
-            <div class="hud__card hud__card--stat">
+        <div id="moves-card" class="hud__card hud__card--stat">
                 <div id="moves-label" class="hud__label" data-i18n-key="hud.label.moves">Moves</div>
                 <div id="moves" class="hud__value">20</div>
             </div>
